--- a/index.html
+++ b/index.html
@@ -154,17 +154,17 @@
                 <p>© 2018 Spoon Inc, All rights reserved.</p>
             </div>
             <div class="info">
-                <div>
+                <div class="info_a">
                     <p>Features</p>
                     <p>Premium</p>
                     <p>Pricing</p>
                 </div>
-                <div>
+                <div class="info_b">
                     <p>About</p>
                     <p>Blog</p>
                     <p>Contact</p>
                 </div>
-                <div>
+                <div class="info_c">
                     <p>Image License Info</p>
                     <p>Powered by Webflow</p>
                 </div>
@@ -177,6 +177,7 @@
 
     </footer>
     <!-- end footer -->
+    
 </body>
 
 </html>
